# test_build

./: BUILD.bazel  WORKSPACE  deps.bzl  go.mod
lib/: BUILD.bazel  collector_linux.go  collector_other.go
