load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "lib",
    srcs = [
        "collector_linux.go",
        "collector_other.go",
    ],
    importpath = "github.com/thempatel/test_build/lib",
    visibility = ["//visibility:public"],
    deps = select({
        "@io_bazel_rules_go//go/platform:aix_ppc64": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:android_386": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:android_amd64": [
            "@org_golang_x_xerrors//:xerrors",
        ],
        "@io_bazel_rules_go//go/platform:android_arm": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:android_arm64": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:darwin_386": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm64": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly_amd64": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:freebsd_386": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:freebsd_amd64": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:freebsd_arm": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:freebsd_arm64": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:illumos_amd64": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:ios_amd64": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:ios_arm64": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:js_wasm": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:linux_386": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            "@org_golang_x_xerrors//:xerrors",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:linux_mips": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:linux_mips64": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:linux_mips64le": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:linux_mipsle": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:linux_ppc64": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:linux_ppc64le": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:linux_riscv64": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:linux_s390x": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:netbsd_386": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:netbsd_amd64": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:netbsd_arm": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:netbsd_arm64": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:openbsd_386": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:openbsd_amd64": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:openbsd_arm": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:openbsd_arm64": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:plan9_386": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:plan9_amd64": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:plan9_arm": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:solaris_amd64": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:windows_386": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:windows_amd64": [
            "@org_golang_x_mod//modfile",
        ],
        "@io_bazel_rules_go//go/platform:windows_arm": [
            "@org_golang_x_mod//modfile",
        ],
        "//conditions:default": [],
    }),
)
